@startuml
title Schéma Conceptuel EIR - Version Flexible

entity Utilisateur {
  *id : UUID
  --
  nom : String
  email : String <<unique>>
  mot_de_passe : String
  type_utilisateur : String
}

entity Appareil {
  *id : UUID
  --
  marque : String
  modele : String
  emmc : String
  proprietaire_id : UUID <<FK>>
  date_creation : Timestamp
}

entity IMEI {
  *id : UUID
  --
  imei_number : String <<unique>>
  slot_number : Integer
  status : String
  appareil_id : UUID <<FK>>
}

' Table de liaison pour partage d'appareils
entity AppareilUtilisateur {
  *id : UUID
  --
  appareil_id : UUID <<FK>>
  utilisateur_id : UUID <<FK>>
  type_acces : String
  date_debut : Timestamp
  date_fin : Timestamp
}

entity SIM {
  *id : UUID
  --
  iccid : String <<unique>>
  operateur : String
  utilisateur_id : UUID <<FK>>
}

entity Recherche {
  *id : UUID
  --
  date_recherche : Timestamp
  imei_recherche : String
  utilisateur_id : UUID <<FK>>
}

entity JournalAudit {
  *id : UUID
  --
  action : Text
  date : Timestamp
  utilisateur_id : UUID <<FK>>
}

' Relations
Utilisateur ||--o{ Appareil : "propriétaire"
Appareil ||--o{ IMEI : "contient"
Appareil ||--o{ AppareilUtilisateur : "partagé avec"
Utilisateur ||--o{ AppareilUtilisateur : "accède à"
Utilisateur ||--o{ SIM : "utilise"
Utilisateur ||--o{ Recherche : "effectue"
Utilisateur ||--o{ JournalAudit : "génère"

note right of AppareilUtilisateur : type_acces:\n- proprietaire\n- utilisateur\n- temporaire

@enduml